# pyodide

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ruff.yml
src/: js.pyi
src/promplate_pyodide/: __init__.py
src/promplate_pyodide/utils/: check.py  openai.py  proxy.py  stack_switching.py  sync.py  warn.py
src/promplate_pyodide/utils/openai/: __init__.py  sync.py
