[project]
name = "promplate-pyodide"
version = "0.0.3.1"
description = "patches for promplate-core for running in pyodide runtime"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
dependencies = ["promplate>=0.3.3.4,<0.3"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pyodide-py~=0.25.0", "ruff~=0.3.0", "openai~=1.13.3"]

[tool.pdm.scripts]
fmt = "ruff format"
lint = "ruff check ."

[tool.ruff]
line-length = 160
fix = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["I", "E4", "E7", "E9", "F"]
